Added Factories, models and error handling for the Books model
